--- a/src/app/pages/application-management/application-cadastro-detail/application-cadastro-detail.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/application-cadastro-detail.component.html
@@ -307,6 +307,12 @@
                                  <input formControlName="telemovel" id="telemovel" type="text" pInputText fluid />
                              </div>
                              <div class="mb-6 col-span-12 md:col-span-6">
+                                 <label for="telefone" class="font-medium  mb-2 block">
+                                     Telefone
+                                 </label>
+                                 <input formControlName="telefone" id="telefone" type="text" pInputText fluid />
+                             </div>
+                             <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="email" class="font-medium  mb-2 block">
                                      Email
                                  </label>
