--- a/src/app/pages/application-management/application-cadastro-detail/pedido-inscricao/pedido-inscricao.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/pedido-inscricao/pedido-inscricao.component.html
@@ -206,7 +206,7 @@
         </div>
 
         <!-- Footer -->
-        <div class="my-8 flex flex-col items-center gap-4">
+        <div class="py-8 flex flex-col items-center gap-4">
             <div>
                 <span class="text-label text-gray-600">Data:</span>
                 <span class="w-12 inline-block border-b border-gray-300 text-center text-value text-black">
@@ -221,13 +221,6 @@
                     {{aplicanteData.updatedAt | date:'yyyy'}}
                 </span>
             </div>
-            <span class="text-label text-gray-600">Assinatura</span>
-            <span class="with-image">
-                <img src="images/stamp.png" alt="Stamp" class="stamp" width="110" height="110" />
-                <span class="text-label text-gray-600">Donald Trump</span>
-            </span>
-            <div class="flex-1"></div>
-            <span class="w-72 inline-block border-b border-black text-center text-value text-black"></span>
         </div>
     </div>
 </div>
