--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -15,7 +15,7 @@
 
 
      <div class="w-full px-8">
-         <p-stepper [value]="1" class="basis-[50rem]" [linear]="false">
+         <p-stepper [value]="1" class="basis-[50rem]" [linear]="true">
              <p-step-list>
                  <p-step [value]="1">Empresa</p-step>
                  <p-step [value]="2">Proprietário(a) / Titular da empresa</p-step>
@@ -165,9 +165,15 @@
                                  </div>
                                  <div class="mb-6 col-span-12 md:col-span-6">
                                      <label for="telemovel" class="font-medium mb-2 block">
-                                         Nº Telemóvel/Telefone
+                                         Nº Telemóvel
                                      </label>
                                      <input formControlName="telemovel" id="telemovel" type="tel" pInputText fluid />
+                                 </div>
+                                  <div class="mb-6 col-span-12 md:col-span-6">
+                                     <label for="telefone" class="font-medium mb-2 block">
+                                         Nº Telefone
+                                     </label>
+                                     <input formControlName="telefone" id="telefone" type="tel" pInputText fluid />
                                  </div>
                                  <div class="mb-6 col-span-12 md:col-span-6">
                                      <label for="email" class="font-medium  mb-2 block">
