--- a/src/app/pages/application-management/application-atividade-detail/pdf/pedido-pdf/pedido-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/pedido-pdf/pedido-pdf.component.html
@@ -381,4 +381,23 @@
         </div>
     </div>
 
+    <div>
+        <span class="text-xl font-bold mb-4 mr-4">Documentos</span>
+        <ul>
+            @for (item of pedido.documentos; track $index) {
+            <li>
+                <a class="cursor-pointer hover:underline hover:text-teal-300">
+                    {{ item.nome }} - {{ bytesToMBs(item.tamanho) }}
+                </a>
+                &nbsp;
+                @if (item.id) {
+                <p-button (click)="downloadDoc(item)" [loading]="loadingDownloadButtons.has(item.nome)"
+                    icon="pi pi-download" [rounded]="true" [text]="true" severity="success" />
+                }
+
+            </li>
+            }
+        </ul>
+    </div>
+
 </div>
