--- a/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
@@ -78,7 +78,9 @@
                     <div class="mb-2 text-black">
                         <p>O Diretor-Geral do Comércio</p>
                         <br>
-                        <p class="text-gray-600">Donald Trump</p>
+                        <p class="text-gray-600">
+                            Nelito Lima de Araújo
+                        </p>
                     </div>
                 </div>
                 <div class="col-span-1">
@@ -153,7 +155,9 @@
                     <div class="mb-2 text-black">
                         <p>O Diretor-Geral da Indústria</p>
                         <br>
-                        <p class="text-gray-600">Donald Trump</p>
+                        <p class="text-gray-600">
+                            Martins Magno
+                        </p>
                     </div>
                 </div>
                 <div class="col-span-1">
