fixed mistype properties

--- a/src/app/pages/application-management/application-atividade-detail/pdf/auto-vistoria-pdf/auto-vistoria-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/auto-vistoria-pdf/auto-vistoria-pdf.component.html
@@ -303,11 +303,11 @@
             </span>
             <div class="grid grid-cols-12 gap-4 pl-4">
                 <div class="mb-6 col-span-12">
-                    <label for="accessoEstrada" class="font-medium text-surface-900  mb-2 block">
+                    <label for="acessoEstrada" class="font-medium text-surface-900  mb-2 block">
                         a) De acesso por estrada:
                     </label>
                     <span class="text-value font-bold">
-                        {{autoVistoria.accessoEstrada | booleanPipe}}
+                        {{autoVistoria.acessoEstrada | booleanPipe}}
                     </span>
                 </div>
                 <div class="mb-6 col-span-12">
@@ -342,7 +342,7 @@
                     <label for="seperadosSexo" class="font-medium text-surface-900  mb-2 block">
                         i.&nbsp;&nbsp; Separados por sexo
                     </label>
-                    {{autoVistoria.seperadosSexo | booleanPipe}}
+                    {{autoVistoria.separadosSexo | booleanPipe}}
                 </div>
                 <div class="mb-6 col-span-12">
                     <label for="lavatoriosComEspelho" class="font-medium text-surface-900  mb-2 block">
