--- a/src/app/pages/application-management/application-atividade-detail/auto-vistoria/auto-vistoria.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/auto-vistoria/auto-vistoria.component.html
@@ -710,6 +710,16 @@
          </div>
          }
          }
+         <div class="grid grid-cols-12 gap-4 mb-12">
+             <div class="mb-12 col-span-12">
+                 <label for="descreverIrregularidades" class="font-medium  mb-2 block">
+                    Verificou-se que (descrever as irregularidades e/ou omissões):
+                 </label>
+                 <textarea id="descreverIrregularidades" rows="5" cols="30" variant="outlined" pTextarea
+                     formControlName="descreverIrregularidades" fluid></textarea>
+             </div>
+         </div>
+
          <span class="text-xl font-bold mb-3 block text-center">
              CONCLUSÃO
          </span>
@@ -769,7 +779,7 @@
          </div>
          <div class="flex justify-content-end mt-6 mb-6">
              <p-button label="Guardar" icon="pi pi-save" (click)="save(autoVistoriaForm)" [loading]="loading"
-                 [disabled]="disabledSubmitButton()" severity="success" />
+                 [disabled]="!autoVistoriaForm.valid" severity="success" />
          </div>
      </form>
  </div>
